--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,3 +1,13 @@
-<h1>
-  {{title}}
-</h1>
+<div class="header">
+  <h1>
+    {{title}}
+  </h1>
+ <nav>
+   <ul>
+     <!--<li> <a [routerLink]="['home']"> Home </a> </li>-->
+   <!-- <li> <a [routerLink]="['about']"> About </a> </li> -->
+   </ul>
+ </nav>
+  <!--<router-outlet></router-outlet>-->
+ </div>
+<app-movies-service></app-movies-service>
