corrected and done

--- a/starter-code/src/app/movies-service/movies-service.component.html
+++ b/starter-code/src/app/movies-service/movies-service.component.html
@@ -18,7 +18,7 @@
    <p>Hours: {{movieObject.hours}}</p>
    <p>Room: {{movieObject.room}}</p>
    <div>
-     <img class="poster" src="{{movie.poster}}">
+     <img class="poster" src="{{movieObject.poster}}">
    </div>
    <a routerLink="/home">Go Back To Movies</a>
  </div>
