--- a/starter-code/src/app/my-home-component/my-home-component.component.html
+++ b/starter-code/src/app/my-home-component/my-home-component.component.html
@@ -3,7 +3,7 @@
    <ul>
      <li *ngFor="let movie of moviesList ;">
        <div class="container">
-         <a href="/movie/{{movie.title }}"><h2 >{{movie.title }}</h2></a>
+         <a href="/movie/{{movie.id}}"><h2 >{{movie.title }}</h2></a>
          <p>{{movie.synopsis }}</p>
          <h3>Genres:</h3>
          <ul>
