--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -4,10 +4,9 @@
   </h1>
  <nav>
    <ul>
-     <!--<li> <a [routerLink]="['home']"> Home </a> </li>-->
+     <li> <a [routerLink]="['home']"> Home </a> </li>
    <!-- <li> <a [routerLink]="['about']"> About </a> </li> -->
    </ul>
  </nav>
-  <!--<router-outlet></router-outlet>-->
+  <router-outlet></router-outlet>
  </div>
-<app-movies-service></app-movies-service>
